add wepack config typéscript

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p && cp _redirects dist/_redirects && node ./src/utils/createEnv.js ",
-    "dev": "webpack-dev-server --open --mode development",
+    "build": "webpack --config config/webpack.prod.js",
+    "dev": "npx webpack serve --config  config/webpack.dev.js",
     "deploy": "aws s3 sync dist/ s3://godat.staging --acl public-read"
   },
   "repository": {
@@ -27,11 +27,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@babel/runtime": "^7.10.5",
-    "dotenv-webpack": "^1.7.0",
+    "core-js": "^3.21.1",
     "downloadjs": "^1.4.7",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^4.10.2",
     "react-icons": "^3.11.0",
     "react-redux": "^7.1.1",
@@ -41,16 +41,24 @@
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.1",
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/preset-env": "^7.6.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
+    "@types/redux": "^3.6.0",
+    "@types/yup": "^0.29.13",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^3.5.3",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -58,12 +66,15 @@
     "eslint-plugin-react": "^7.16.0",
     "file-loader": "^4.3.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "raw-loader": "^4.0.1",
+    "react-refresh": "^0.11.0",
     "style-loader": "^1.2.1",
+    "typescript": "^4.5.5",
     "url-loader": "^3.0.0",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   }
 }
