--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,19 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-optional-chaining",
-    "@babel/transform-runtime"
-  ]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "corejs": "3.21.1",
+        "useBuiltIns": "usage"
+      }
+    ],
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ],
+    "@babel/preset-typescript"
+  ],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
